--- a/centraldashboard/Dockerfile
+++ b/centraldashboard/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/centraldashboard:v1.0.0-g3ec0de71
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
