--- a/jupyter-web-app/Dockerfile
+++ b/jupyter-web-app/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/jupyter-web-app:v1.0.0-g2bd63238
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
