--- a/kfserving-controller/Dockerfile
+++ b/kfserving-controller/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kfserving/kfserving-controller:0.2.2
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
