--- a/kubeflow-ingress-setup/Dockerfile
+++ b/kubeflow-ingress-setup/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/ingress-setup:latest
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
