--- a/metadata-frontend/Dockerfile
+++ b/metadata-frontend/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/metadata-frontend:v0.1.8
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
