--- a/metadata/Dockerfile
+++ b/metadata/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/metadata:v0.1.11
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
