--- a/minio/Dockerfile
+++ b/minio/Dockerfile
@@ -1,2 +1,2 @@
 FROM minio/minio:RELEASE.2018-02-09T22-40-05Z
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
