--- a/pytorch-operator/Dockerfile
+++ b/pytorch-operator/Dockerfile
@@ -1,2 +1,2 @@
 FROM gcr.io/kubeflow-images-public/pytorch-operator:v1.0.0-g047cf0f
-MAINTAINER zz<zhongzheng0813@163.com>
+MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
