--- a/jupyter-web-app/Dockerfile
+++ b/jupyter-web-app/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/jupyter-web-app:v1.0.0-g2bd63238
+FROM gcr.io/kubeflow-images-public/jupyter-web-app:vmaster-gd9be4b9e
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
