--- a/katib-db-manager/Dockerfile
+++ b/katib-db-manager/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/katib/v1alpha3/katib-db-manager:v0.8.0
+FROM gcr.io/kubeflow-images-public/katib/v1alpha3/katib-db-manager:917164a
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
