--- a/katib-ui/Dockerfile
+++ b/katib-ui/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/katib/v1alpha3/katib-ui:v0.8.0
+FROM gcr.io/kubeflow-images-public/katib/v1alpha3/katib-ui:917164a
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
