--- a/pytorch-operator/Dockerfile
+++ b/pytorch-operator/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/pytorch-operator:v1.0.0-g047cf0f
+FROM gcr.io/kubeflow-images-public/pytorch-operator:vmaster-gd596e904
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
