--- a/profile-controller/Dockerfile
+++ b/profile-controller/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/profile-controller:v1.0.0-ge50a8531
+FROM gcr.io/kubeflow-images-public/profile-controller:vmaster-g34aa47c2
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
