--- a/tf_operator/Dockerfile
+++ b/tf_operator/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/tf_operator:v1.0.0-g92389064
+FROM gcr.io/kubeflow-images-public/tf_operator:vmaster-ga2ae7bff
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
