--- a/kfam/Dockerfile
+++ b/kfam/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/kubeflow-images-public/kfam:v1.0.0-gf3e09203
+FROM gcr.io/kubeflow-images-public/kfam:v1.1.0-g9f3bfd00
 MAINTAINER zhangchunsheng<zhangchunsheng423@gmail.com>
